Update global styles to correct background image paths and improve z-index formatting for better consistency and maintainability.

--- a/app/globals.css
+++ b/app/globals.css
@@ -83,7 +83,7 @@
   width: 100%;
   height: 100%;
   background-color: #00000082;
-  z-index:-1;
+  z-index: -1;
 }
 
 /* Swiper Customization */
@@ -249,7 +249,7 @@ swiper-container.blog-slider::part(container) {
 
 .contact-banner {
   height: 700px;
-  background: url(../public/images/Contact-banner-bg.webp);
+  background: url(/images/Contact-banner-bg.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
@@ -289,7 +289,7 @@ swiper-container.blog-slider::part(container) {
 
 .banner {
   height: 550px;
-  background-image: url(../assets/banner.webp);
+  background-image: url(/assets/banner.webp);
   background-repeat: no-repeat;
   background-position: center center;
   background-size: cover;
